# litquote

./: .gitignore  CLAUDE.md  README.md  sample_quotes.csv
.claude/plans/: 01-rfq-management.md  02-supplier-quote-management.md  03-quote-comparison.md  04-csv-import.md
.claude/specs/: 01-rfq-management.md  02-supplier-quote-management.md  03-quote-comparison.md  04-csv-import.md
client/: index.html  package-lock.json
client/public/: sample_quotes.csv
client/src/: App.css  App.jsx  index.css
client/src/components/: AddQuoteForm.css  AddQuoteForm.jsx  AddQuoteModal.jsx  CSVImportModal.css  CSVImportModal.jsx  ConfirmModal.css  ConfirmModal.jsx  CreateRFQModal.css  CreateRFQModal.jsx  EditQuoteModal.jsx  EditRFQModal.jsx  Layout.css  Layout.jsx  QuoteTable.css  QuoteTable.jsx  RFQSummaryCard.jsx
client/src/hooks/: useAddQuote.js  useAwardQuote.js  useCSVImport.js  useCreateRFQ.js  useEditQuote.js  useEditRFQ.js  useQuotes.js  useRFQ.js  useRFQList.js  useVoidRFQ.js
client/src/pages/: CreateRFQPage.jsx  RFQDetailPage.jsx  RFQListPage.jsx
product-docs/: 01-architecture.md  02-data-model.md  03-api-spec.md  04-csv-format.md  05-frontend-guide.md  06-backend-guide.md  07-readme-template.md
server/: .env.example  main.py  pyproject.toml
server/db/: connection.py  seed.py
server/db/migrations/: 001_initial_schema.sql  002_rfq_workflow.sql  003_void_status.sql  004_quote_updates.sql
server/models/: quote.py  rfq.py
server/routers/: csv_import.py  quotes.py  rfq.py
server/services/: comparison.py  csv_parser.py
